Add option to hide original Chess.com coordinates on initialization

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -81,6 +81,14 @@
     </label>
   </div>
   
+  <div class="toggle-container">
+    <span>Hide Chess.com Coordinates</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="hide-original-toggle" checked>
+      <span class="slider"></span>
+    </label>
+  </div>
+  
   <div class="footer">
     Chess.com Coordinates Extension
   </div>
