--- a/popup/popup.html
+++ b/popup/popup.html
@@ -89,6 +89,14 @@
     </label>
   </div>
   
+  <div class="toggle-container">
+    <span>Highlight on Hover</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="hover-effect-toggle" checked>
+      <span class="slider"></span>
+    </label>
+  </div>
+  
   <div class="footer">
     Chess.com Coordinates Extension
   </div>
