--- a/popup/popup.html
+++ b/popup/popup.html
@@ -60,10 +60,10 @@
     input:checked + .slider:before {
       transform: translateX(26px);
     }
-    .font-size-container {
+    .font-size-container, .opacity-container {
       margin-bottom: 15px;
     }
-    .font-size-label {
+    .font-size-label, .opacity-label {
       display: flex;
       justify-content: space-between;
       margin-bottom: 5px;
@@ -135,6 +135,11 @@
   <div class="font-size-container">
     <div class="font-size-label">Font Size: <span id="font-size-value">100%</span></div>
     <input type="range" id="font-size-slider" min="50" max="100" value="100" class="range-slider">
+  </div>
+  
+  <div class="opacity-container">
+    <div class="opacity-label">Contrast: <span id="opacity-value">6%</span></div>
+    <input type="range" id="opacity-slider" min="2" max="20" value="6" class="range-slider">
   </div>
   
   <div class="footer">
