Improve legal moves highlighting
- Use Chess.com's hint elements to detect legal moves
- Reduce legal move opacity to 0.2 for a more subtle display
- Fix bug where legal moves weren't showing when "Show Coordinates" was disabled
- Improve contrast of legal moves to match hover contrast
- Optimize toggleCoordinatesVisibility function to properly handle different option combinations

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -157,6 +157,14 @@
     </label>
   </div>
   
+  <div class="toggle-container">
+    <span>Highlight on Legal Moves</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="show-legal-moves-toggle">
+      <span class="slider"></span>
+    </label>
+  </div>
+  
   <div class="font-size-container">
     <div class="font-size-label">Font Size: <span id="font-size-value">100%</span></div>
     <input type="range" id="font-size-slider" min="50" max="100" value="100" class="range-slider">
