--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,10 @@
       padding: 10px;
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
+      transition: opacity 0.3s;
+    }
+    body.disabled {
+      opacity: 0.6;
     }
     h1 {
       font-size: 16px;
@@ -120,18 +124,79 @@
       border-top: 1px solid #ddd;
       padding-top: 10px;
     }
+    
+    /* Power button styles */
+    .power-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+      padding-bottom: 15px;
+      border-bottom: 2px solid #ddd;
+    }
+    .power-button {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+    }
+    .power-icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 5px;
+      transition: background-color 0.3s;
+      border: 2px solid #999;
+      position: relative;
+    }
+    .power-icon.active {
+      background-color: #769656;
+      border-color: #5a7a3d;
+    }
+    .power-icon::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 16px;
+      height: 16px;
+      border: 2px solid white;
+      border-radius: 50%;
+    }
+    .power-icon::after {
+      content: '';
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 2px;
+      height: 10px;
+      background-color: white;
+    }
+    .power-label {
+      font-size: 12px;
+      font-weight: bold;
+      color: #555;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <h1>Chess.com Coordinates</h1>
   
-  <div class="toggle-container">
-    <span>Show Coordinates</span>
-    <label class="toggle-switch">
-      <input type="checkbox" id="coordinates-toggle" checked>
-      <span class="slider"></span>
-    </label>
+  <div class="power-container">
+    <div class="power-button" id="power-button">
+      <div class="power-icon active" id="power-icon"></div>
+      <span class="power-label">Extension ON/OFF</span>
+    </div>
   </div>
+  
+  <input type="checkbox" id="coordinates-toggle" checked style="display: none;">
   
   <div class="toggle-container">
     <span>Hide Chess.com Coordinates</span>
