--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,8 @@
       width: 200px;
       padding: 10px;
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #262421;
+      color: #e4e4e4;
       transition: opacity 0.3s;
     }
     body.disabled {
@@ -15,7 +16,7 @@
     }
     h1 {
       font-size: 16px;
-      color: #333;
+      color: #e4e4e4;
       margin-bottom: 15px;
       text-align: center;
     }
@@ -24,6 +25,7 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 15px;
+      color: #e4e4e4;
     }
     .toggle-switch {
       position: relative;
@@ -43,7 +45,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: #ccc;
+      background-color: #555;
       transition: .4s;
       border-radius: 24px;
     }
@@ -66,15 +68,15 @@
     }
     /* Style pour les toggles désactivés (readonly) */
     input:disabled + .slider {
-      background-color: #e0e0e0;
+      background-color: #444;
       opacity: 0.7;
       cursor: not-allowed;
     }
     input:disabled:checked + .slider {
-      background-color: #a9c2a2; /* Version plus claire du vert */
+      background-color: #4c6339; /* Version plus foncée du vert */
     }
     input:disabled + .slider:before {
-      background-color: #f0f0f0;
+      background-color: #888;
     }
     /* Style pour le conteneur du toggle désactivé */
     .toggle-container.readonly {
@@ -89,13 +91,13 @@
       justify-content: space-between;
       margin-bottom: 5px;
       font-size: 14px;
-      color: #333;
+      color: #e4e4e4;
     }
     .range-slider {
       width: 100%;
       height: 5px;
       border-radius: 5px;
-      background: #ddd;
+      background: #555;
       outline: none;
       -webkit-appearance: none;
       appearance: none;
@@ -118,10 +120,10 @@
     }
     .footer {
       font-size: 12px;
-      color: #666;
+      color: #999;
       text-align: center;
       margin-top: 15px;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #444;
       padding-top: 10px;
     }
     
@@ -132,7 +134,7 @@
       justify-content: center;
       margin-bottom: 20px;
       padding-bottom: 15px;
-      border-bottom: 2px solid #ddd;
+      border-bottom: 2px solid #444;
     }
     .power-button {
       display: flex;
@@ -181,7 +183,7 @@
     .power-label {
       font-size: 12px;
       font-weight: bold;
-      color: #555;
+      color: #e4e4e4;
       text-align: center;
     }
   </style>
